--- a/profile.html
+++ b/profile.html
@@ -67,7 +67,7 @@
                 		<div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                			 <br>
                 		<p>Mandarin Chinese</p>
-                		<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                		<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 
 					</div>
 				</div>
@@ -82,16 +82,19 @@
                 		<div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 	<br>
                 		<p>Google Analytics</p>
-                		<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                		<div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 	<br>
                 		<p>Google AdWords</p>
-                		<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                		<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 	<br>
                 		<p>IBM Analytics</p>
-                		<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                		<div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                   <br>
                     <p>SPSS</p>
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  <br>
+                    <p>IT: Microsoft Office, email and Internet</p>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
 				</div>
 			</div>	
@@ -99,74 +102,132 @@
      			<div class="card block-txt">
      				<div class="block1">
         			</div>
-        			<h2> Profile </h2>
+        			<h4> Profile </h4>
         				<ul>
-      						<li>Minions!</li>
-     						 <li>Moar Minions!</li>
-     						 <li>Moar Minions!</li>
+      						<li>in progress!</li>
+     						 <li>in progress!</li>
+     						 <li>in progress!</li>
     					</ul>
 
 				</div>
 				<div class="card block-txt">
-        			<h2> Education </h2>
+        			<h4> Education </h4>
+              <h6><strong>MSc Strategic Marketing, Imperial College Business School, London - UK</strong></h6>
         				<ul>
-      						<li>Imperial College London: MSc Strategic Marketing, London-UK</li>
-      						<p>Modules:
-      						</p>
-     						<li>Newcastle University: BA International Business Management, Newcastle-UK</li>
-							<p class="awfi">Awarded: First Class</p>
-							<p class="mod">Modules: Accounting and Finance, Management and Organisation, Global Business Environment, Business Emergence and Growth, Research Skills for Business Research and Consultancy, Managing Across Cultures, Operations Strategy and Management, International Entrepreneurship, International HRM, Contemporary Issues in International and Comparative Business, and Chinese Levels A, B and C.</p>
-							<p> Research: "Cross-Cultural Differences in the Development of Business Relationships: A Case Study of Chinese Managers working in Latin America"</p>
-     						<li>East China Normal University (ECNU): Mandarin Chinese, Shanghai-China</li>
-     						<p> </p>
-     						<li>SEK International School: IB Diploma, Guayaquil-Ecuador</li>
-     						<p class="coh">Cohort's highest International Baccalaureate Diploma: 33/42 points.</p>
-     						<p class="levels">Higher level: English B (6), Spanish A (6), Business and Management (5). </p>
-     						<p class="levels2">Standard level: Maths (5), History (5), Biology (4). </p>
-     						<p>Excellent Extended Essay and satisfactory Theory of Knowledge (2).</p>
-    					</ul>	
+      						<li>Modules:
+      						</li>
+                </ul>
+              <h6><strong>BA International Business Management, Newcastle University, Newcastle - UK</strong></h6>
+     						<ul>
+                  <li>Awarded: First Class</li>
+							    <li class="mod">Modules: Accounting and Finance, Management and Organisation, Global Business Environment, Business Emergence and Growth, Research Skills for Business Research and Consultancy, Managing Across Cultures, Operations Strategy and Management, International Entrepreneurship, International HRM, Contemporary Issues in International and Comparative Business, and Chinese Levels A, B and C.</li>
+							    <li> Research: "Cross-Cultural Differences in the Development of Business Relationships: A Case Study of Chinese Managers working in Latin America"</li>
+     						</ul>
+                  <h6><strong>Mandarin Chinese, East China Normal University (ECNU), Shanghai - China</strong></h6>
+                  <ul>
+                    <li> studied chinese!!! </li> 
+                  </ul>
+                  <h6><strong>International Baccalaureate Diploma, SEK International School, Guayaquil - Ecuador</strong></h6>
+                  <ul>
+                <li class="coh">Cohort's highest International Baccalaureate Diploma: 33/42 points.</li>
+     						<li class="levels">Higher level: English B (6), Spanish A (6), Business and Management (5). </li>
+     						<li class="levels2">Standard level: Maths (5), History (5), Biology (4). </li>
+     						<li>Excellent Extended Essay and satisfactory Theory of Knowledge (2).</li>
+              </ul>
 				    </div>
 				<div class="card block-txt">
      				<div class="block1">
         			</div>
-        			<h2>Work Experience </h2>
-        				<ul>
-      						<p>CARGOLAN S.A.</p>
+        			<h4>Work Experience </h4>
+              <br>
+      						<h6><strong>Marketing Assistant, Cargolan S.A., Guayaquil - Ecuador</strong></h6>
+                  <ul>
       						<li>Enhanced organisational and time management skills by working on tight agendas, organising meetings and arranging promotional events in preparation of the 75th anniversary of the company.
 							<li>Conducted market research and analysed digital data in order to improve business performance through better digital measurement.</li>
 							<li>Responsible for updating the company website and social media platforms and for promoting the company's anniversary.</li>
 							<li>Developed communication and interpersonal skills through constant communication with current and prospective customers, which strengthened the B2C relationship.</li>
-      						<br>
-                  <p><strong>DEUGRO</strong>
-      						</p>
+      						</ul>
+                  <br>
+                  <h6><strong>Traffic Division, deugro, Madrid - Spain</strong></h6>
+                  <ul>
      						<li>Expanded my financial skills by negotiating rates, cost-cutting and budgeting seeking the most cost-efficient methods to handle the cargo.<li>
 							<li>Developed fast business acumen helping me to get more involved in the day to day business.</li>
 							<li>Reinforced my communicational skills by keeping contact with clients and tracking transportation.</li>
      						<li>Improved problem solving skills in a rapid changing environment as occurs in everyday logistics.</li>
+              </ul>
      						<br>
-                <p><strong>MILKROUND</strong></p>
+                <h6><strong>Promotions Assistant, Milkround, London - UK</strong></h6>
+                <ul>
      						<li> Enthusiastically promoted Milkround’s careers resources to students and other attendants, demonstrating a natural ability to work in teams and the customer’s ease conviction.</li>
      						<li>Developed my interpersonal and public communicational skills by informing students and other attendants about careers resources, demonstrating a confident and reliable attitude.</li>
+              </ul>
      						<br>
-     						<p>GAMA TV</p>
+     						<h6><strong>Communications Intern, GamaTv, Guayaquil - Ecuador</strong></h6>
+              <ul>
      						<li>Worked within a big team of organisers, coordinators, media and public figures on the preparation of Miss Ecuador 2010’s events, and developed the ability to react</li>
      						<li>Responsible for contacting media and sponsors, and for providing innovative ideas for the different events held during the preparation of Miss Ecuador 2010</li>
-
     					</ul>
 				</div>
 			</div>
 			<div class="col-md-3 justif">
-     			<div class="card">
-     				<div class="card-block">
+     			<div class="card block-txt">
+     				<div class="block1">
         			</div>
-        			<h2>Positions of Responsibility<h2>
-        				<ul>
-        					<p>Brand Ambassador </p>
-        					<li>
+        			<h4>Leadership Roles</h4>
+                <ul>
+        					<li>Brand Ambassador at Imperial College Business School</li>
+                  <li>Student Representative at Newcastle University</li>
+                  <li>Founder and PR Officer of the Latin American Society in Newcastle University</li>
+                  <li>Student Council President at SEK International School</li>
         				</ul>
 
-			</div>
-		</div>
+			     </div>
+           <div class="card block-txt">
+            <div class="block1">
+              </div>
+              <h4>Awards and Achievements</h4>
+                <ul>
+                  <li>Runner-up PwC Consultancy Project 2016, Imperial College London</li>
+                  <br>
+                  <li>Student Award for Outstanding Performance 2011 - 2015, Newcastle University</li>
+                  <br>
+                  <li>Philantropic Award from Guayaquil City Council, given to best high school students of the city</li>
+                  <br>
+                  <li>Ecuador’s flag bearer, most important appointment in school, due to being the best student during the six years of high school</li>
+                  <br>
+                  <li>Member of Imperial College Women's Football Club (ICWFC) 2016-2017, Imperial College Marketing and Digital Society 2016-2017, Imperial College Entrepreneurship Club 2016-2017</li>
+                  <br>
+                  <li>Member of Newcastle University Women’s Football Club (NUWFC) 2011-2015, Latin American Society 2012-2015, Dance Society 2012, Anglo-Chinese Society 2015</li>
+                  <br>
+                  <li>Voluntary social work (2005 – 2011) for children, low income families, elderly people and disabled people, teaching basic knowledge and planning activities to encourage and inspire the most needed</li>
+                </ul>
+           </div>
+           <div class="card block-txt">
+            <div class="block1">
+              </div>
+              <h4>Additional Skills</h4>
+                <ul>
+                  <li>IBM Digital Analytics Certificate from IBM</li>
+                  <li>HTML and CSS Certificate from CodeAtUni</li>
+                  <li>Advanced Accounting Certificate from Guayas Accountants Association</li>
+                  <li>Driving License</li>
+                </ul>
+
+           </div>
+           <div class="card block-txt">
+            <div class="block1">
+              </div>
+              <h4>Interests and Social Activities</h4>
+                <ul>
+                  <li>Travel</li>
+                  <li>Gym</li>
+                  <li>Volunteering</li>
+                  <li>Sports</li>
+                  <li>Foodie!</li>
+                </ul>
+
+           </div>
+		  </div>
 	</div>
 </body>
 </html>
