--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h1 class="display-3">I am THE grumpy cat</h1>
+            <h1 class="display-3">Hi everyone!</h1>
             <h2 class="display-1">
-              I hate Mondays, work, everything!<br>
-              Everything I tell you!
+              new page<br>
+              in progress
             </h2>
             <p class="lead">
               <a class="btn btn-primary btn-lg" href="profile.html">About me</a>
